fix: map visibility in Hom Page iOS

--- a/assets/css/pages/home.css
+++ b/assets/css/pages/home.css
@@ -44,9 +44,27 @@ body.home .ce-home-landings-section .slick-arrow {
   justify-content: flex-start;
   margin-top: 20%;
 }
+#troba-la-teva-comunitat #step-arrow::before{
+  content:url(/wp-content/themes/wp-coop-ce-theme-v-2/img/icons/right-arrow-gray-1.png);
+}
+
 #troba-la-teva-comunitat #step {
   position: relative;
 }
+
+#troba-la-teva-comunitat #step1,
+  #troba-la-teva-comunitat #step2,
+  #troba-la-teva-comunitat #step3,
+  #troba-la-teva-comunitat #step4{
+    position: relative;
+    height: 180px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+
+
+
 #troba-la-teva-comunitat #step-number {
   font-family: var(--wp--preset--font-family--title);
   font-weight: var(--wp--custom--font-weight--bold);
@@ -65,6 +83,9 @@ body.home .ce-home-landings-section .slick-arrow {
   content: "\A";
   white-space: pre;
 }
+
+
+
 /*step numbers for mobile slider*/
 @media (max-width: 782px) {
   #troba-la-teva-comunitat #step-number {
@@ -74,4 +95,29 @@ body.home .ce-home-landings-section .slick-arrow {
     left: 45%;
     top: 95%;
   }
+  #troba-la-teva-comunitat #step1,
+  #troba-la-teva-comunitat #step2,
+  #troba-la-teva-comunitat #step3,
+  #troba-la-teva-comunitat #step4{
+    position: relative;
+    height: 300px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
+
+
+
+#troba-la-teva-comunitat #step1{
+  background-image: url(/wp-content/themes/wp-coop-ce-theme-v-2/img/icons/Apuntat1.jpg);
+}
+#troba-la-teva-comunitat #step2{
+  background-image: url(/wp-content/themes/wp-coop-ce-theme-v-2/img/icons/Apuntat2.jpg);
+}
+#troba-la-teva-comunitat #step3{
+  background-image: url(/wp-content/themes/wp-coop-ce-theme-v-2/img/icons/Apuntat3.jpg);
+}
+#troba-la-teva-comunitat #step4{
+  background-image: url(/wp-content/themes/wp-coop-ce-theme-v-2/img/icons/Apuntat4.jpg);
+}
+
